syntax="proto3";
package com.thesis.generated;
option java_multiple_files=true;

message Request{
    enum Action{
        CREATE=0;
        FILL=1;
    }

    Action action=1;
}

message Practice{

    string practiceId=1;
    string status=2;
    string name=3;
    string surname=4;
    string email=5;
    string phone=6;    
    Request req=7;
    //TODO: insert financing data
}

message PracticeResponse{
    string status=1;
    string practiceId=2;
}

service Banking{
    rpc CreatePractice(Practice) returns (PracticeResponse);
    rpc FillPractice(Practice) returns (PracticeResponse);
}